--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "symfony/var-dumper": "^6.0",
+        "symfony/var-dumper": "^5.4 || ^6.0",
         "pestphp/pest": "^1.22",
         "phpstan/phpstan": "^1.10",
         "rector/rector": "^0.15.21"
