--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ["8.0", 8.1, 8.2]
+        php: [7.4, "8.0", 8.1, 8.2]
 
     name: Tests PHP ${{ matrix.php }}
 
@@ -57,12 +57,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: cache-php-8.0-composer-${{ hashFiles('composer.json') }}
+          key: cache-php-7.4-composer-${{ hashFiles('composer.json') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.0"
+          php-version: "7.4"
           extensions: mbstring
           coverage: pcov
 
