--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^7.4 || ^8.0",
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "symfony/var-dumper": "^6.0",
+        "symfony/var-dumper": "^5.4 || ^6.0",
         "pestphp/pest": "^1.22",
-        "laravel/pint": "^1.5",
         "phpstan/phpstan": "^1.10",
         "rector/rector": "^0.15.21"
     },
